  - This new feature is switched on by default and can be switched off in
    Menu File --> New Session Properties --> Tab SQL --> Show SQL execution errors in result tab.
  - Along with this feature comes a new Message Panel right mouse menu "Save size 0" that allows
    to hide the Message panel at application start up.

Bug-fixes:

3293737: A exception occurs if the value of a SMALLINT column is edited in a result table.

When editing table cells in a text area, the input field for the file name will be shown in an appropriate size 
  instead of being very small. If the user change the size of the dialog, the input field for the file name will use the extra space.

3238037: It's impossible to create a foreign key in oracle 10g, if some tables contains a / in their name eg. recycle bins

Now, "Press to open logs" shows  the current log file by default instead of a random one.

3222350: Cannot enter negative values for numeric fields when editing the result table.

3196153: When typing using shift, you must release shift to type space

3088572: Squirrel fails when user tries to edit DB fields which have particular characters.

3175871: On export to Excel, some numeric values are not exported correctly.  

SQL Scripts Plugin: Increased multi table script configuration dialog's size.

3171762: Wrong syntax for DROP KEY (When qualify table name preference is selected this produced two schema
         or catalog prefixes on the table name)
3148653: Missing App Icon on Mac OS X (Fix is available in the Mac OS X 3.2.1 installer file)

Fixed NullPointerException in Hibernate Plugin when executing HQL with 'view objects' switched on.

Hibernate Plugin: Made HQL code completion work more exact.

Hibernate Plugin: Removed unused imports to regain compile independence from Hibernate API changes, see patch ID 3168381

3.2.1 (12/29/2010)
==================

Enhancements:

Feature request 3030479: New global preference that allows scrollable tabbed pane for Session tabs.
